# OhseyDev

./: .gitignore  BOOK.md  Cargo.toml  HEALTH.md  HEALTHMETRICS.md  Health Metrics.md  README.md  build.rs  ghost-export.json  health-metrics.md  pacman.conf  pkglist.txt  site.webmanifest  sway  swaystatus  terminal_colours.json
android/: .android  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  app.cpp
android/app/src/main/res/values/: strings.xml
assets/: script.js  site.webmanifest  stylesheet.css
assets/js/: index.js
cfg/: fuzzel.ini  ohmyshell.json  pacman.conf  pkglist.txt  sway  terminal_colours.json
cfg/kitty/: cursor.conf  fonts.conf  keybinds.conf  kitty.conf
cfg/kitty/kitty/: colours.conf  fonts.conf  keybinds.conf  kitty.conf  tab.conf
config/kitty/: colours.conf  cursor.conf
csdsa/rust/: Cargo.toml
csdsa/rust/src/: lib.rs  stack.rs
cursor/: README.txt  VERSION  cursor.theme  index.theme
cursor/x/: bd_double_arrow  bottom_left_corner  bottom_right_corner  bottom_side  bottom_tee  center_ptr  circle  context-menu  copy  cross  crosshair  dnd-ask  dnd-copy  dnd-link  dnd_no_drop  dotbox  fd_double_arrow  grabbing  hand1  hand2  left_ptr  left_ptr_watch  left_side  left_tee  link  ll_angle  lr_angle  move  pencil  plus  pointer-move  question_arrow  right_ptr  right_side  right_tee  sb_down_arrow  sb_h_double_arrow  sb_left_arrow  sb_right_arrow  sb_up_arrow  (+13 more)
docs/: CNAME  Gemfile  _config.yml
examples/: article.html
kitty/: colours.conf  kitty.conf  tab.conf
scripts/: basic.js  create_win_usb.sh  extern.js  install_arch.sh  install_packages.sh  setup_system.sh  update.sh
src/: common.rs  server.rs
src/webfront/: content.rs  mod.rs  templates.rs
style/: article.css  base.css
stylesheets/: basic.css  index.css
templates/: basic.stpl  brand.stpl  favicon.stpl  full.stpl  metadata.stpl  themeswitch.html  themeswitch.stpl  topnav.stpl
theme/: base.sass  base.scss  colors.sass  links.sass  text.sass  theme.sass
theme/examples/: homepage.xhtml  video.xhtml  web-base.xhtml
theme/widgets/: article.sass  aside.sass  container.sass  header.sass  main.sass  nav.sass  sample.sass
web-style/: base.scss
