[package]
name = "ocme"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sailfish = { version = "0.8.3", optional = true }
html = { version = "0.6.3", optional = true }
url = { version = "2.5.0", optional = true }
sql-builder = { version = "3.1.1", optional = true }
hyper = { version = "1.1.0", optional = true, features = ["http1", "http2", "server"] }
tokio = { version = "1.35.1", optional = true, features = ["rt-multi-thread", "macros", "net", "sync"] }
oxide-auth = { version = "0.5.4", optional = true }
oxide-auth-async = { version = "0.1.1", optional = true }
quinn = { version = "0.10.2", optional = true }
tokio-postgres = { version = "0.7.10", optional = true }
postgres-types = { version = "0.2.6", optional = true }
postgres-native-tls = { version = "0.5.0", optional = true }
serde = { version = "1.0.193", optional = true }
dotenvy = { version = "0.15.7", optional = true }
svg = { version = "0.15.0", optional = true }

[features]
program = ["dep:dotenvy", "dep:tokio"]
server = ["program", "dep:hyper", "dep:quinn", "dep:oxide-auth", "dep:oxide-auth-async"]
common = ["dep:tokio-postgres", "dep:postgres-types", "dep:postgres-native-tls", "dep:quinn", "dep:html", "dep:url", "dep:sailfish", "dep:svg", "dep:serde", "dep:sql-builder"]

[[bin]]
name = "ocme-server"
path = "src/server.rs"
test = false
required-features = ["server", "program"]

[[bin]]
name = "ocme-management"
path = "src/management.rs"
test = false
required-features = ["program"]

[lib]
name = "ocme"
path = "src/common.rs"
test = true
doctest = false
bench = true
doc = true
proc-macro = false
harness = false
required-features = ["common"]

