[package]
name = "ocme"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dotenvy = { version = "0.15.7", optional = true }
# common dependencies
num-traits = { version = "0.2.17", optional = true, features = ["i128"] }
tokio-postgres = {
  version = "0.7.10",
  optional = true,
  default-features = false,
  features = ["runtime", "with-chrono-0_4", "with-uuid-1", "with-geo-types-0_7", "array-impls"]
}
sailfish = {
  version = "0.8.3",
  optional = true,
  default-features = false,
  version = ["derive", "config", "serde", "sailfish-macros"]
}
smol_str = { version = "0.2.1", optional = true, features = ["std", "serde"] }
html = { version = "0.6.3", optional = true }
svg = { version = "0.15.0", optional = true }
url = { version = "2.5.0", optional = true, features = ["serde", "default"] }
sql-builder = { version = "3.1.1", optional = true }
geo-types = {
  version = "0.7.12",
  optional = true,
  features = ["use-rstar_0_11", "serde"]
}
uuid = {
  version = "1.7.0",
  optional = true,
  features = ["v7", "v5", "v4", "serde"]
}
chrono = { version = "0.4.33", optional = true, features = ["serde"] }
postgres-types = {
  version = "0.2.6",
  optional = true,
  features = ["with-smol_str-01", "with-geo-types-0_7", "with-uuid-1", "with-geo-types-0_7", "with-chrono-0_4"]
}
postgres-native-tls = { version = "0.5.0", optional = true }
serde = { version = "1.0.193", optional = true }

# server dependencies
tokio = { # async
  version = "1.35.1",
  optional = true,
  default-features = false,
  features = ["rt-multi-thread", "signal", "macros", "net", "sync"]
}
hyper = { version = "1.1.0", optional = true, features = ["http1", "http2", "server"] } # http
quinn = { version = "0.10.2", optional = true } # quic protocol
oxide-auth = { version = "0.5.4", optional = true }
oxide-auth-async = { version = "0.1.1", optional = true }

[features]
program = ["dep:dotenvy"]
server = [
  "program",
  "dep:tokio",
  "dep:hyper",
  "dep:quinn",
  "dep:oxide-auth",
  "dep:oxide-auth-async",
]
common = [
  "dep:num-traits",
  "dep:tokio-postgres",
  "dep:sailfish",
  "dep:smol_str",
  "dep:html",
  "dep:svg",
  "dep:url",
  "dep:sql-builder",
  "dep:geo-types",
  "dep:uuid",
  "dep:chrono",
  "dep:postgres-types",
  "dep:postgres-native-tls",
  "dep:serde",
]

[[bin]]
name = "ocme-server"
path = "src/server.rs"
test = false
required-features = ["server", "program"]

[[bin]]
name = "ocme-management"
path = "src/management.rs"
test = false
required-features = ["program"]

[lib]
name = "ocme"
path = "src/common.rs"
test = true
doctest = false
bench = true
doc = true
proc-macro = false
harness = false
required-features = ["common"]

